z-index fix

--- a/handiplanet/public/style/scss/app.scss
+++ b/handiplanet/public/style/scss/app.scss
@@ -133,6 +133,7 @@
         width: 8vh;
         border-radius: calc(8vh / 2);
         color: white;
+        z-index: 1000;
       }
       .selected{
         background-color: #cb563e;
